--- a/Buoi2/data_types.ipynb
+++ b/Buoi2/data_types.ipynb
@@ -47,10 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "75311e8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Cách lấy kiểu dữ liệu của một biến trong Python\n",
     "x = 5\n",
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8c0c0b86",
    "metadata": {},
    "outputs": [
@@ -73,7 +81,7 @@
    ],
    "source": [
     "# Dạng số\n",
-    "x = 1    # int\n",
+    "x = 113123123    # int\n",
     "y = 2.8  # float\n",
     "z = 1j   # complex\n",
     "print(type(x), type(y), type(z))"
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "be74a1db",
    "metadata": {},
    "outputs": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "15908fcb",
    "metadata": {},
    "outputs": [
@@ -143,6 +151,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "35000.0\n",
+      "120000.0\n",
       "<class 'float'>\n",
       "<class 'float'>\n",
       "<class 'float'>\n"
@@ -154,7 +164,9 @@
     "x = 35e3\n",
     "y = 12E4\n",
     "z = -87.7e100\n",
-    "\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print\n",
     "print(type(x))\n",
     "print(type(y))\n",
     "print(type(z))"
@@ -162,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "814bffb5",
    "metadata": {},
    "outputs": [
@@ -170,6 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(3+5j)\n",
+      "5j\n",
       "<class 'complex'>\n",
       "<class 'complex'>\n",
       "<class 'complex'>\n"
@@ -181,6 +195,8 @@
     "x = 3+5j\n",
     "y = 5j\n",
     "z = -5j\n",
+    "print(x)\n",
+    "print(y)\n",
     "\n",
     "print(type(x))\n",
     "print(type(y))\n",
@@ -189,10 +205,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ddd844e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1\n",
+      "1j\n"
+     ]
+    }
+   ],
    "source": [
     "# ÉP KIỂU DỮ LIỆU\n",
     "# Bạn có thể ép kiểu dữ liệu của một biến sang kiểu khác bằng cách sử dụng các hàm như int(), float(), str().  \n",
@@ -201,13 +227,19 @@
     "z = 1j   # complex\n",
     "\n",
     "# Ép x sang float\n",
+    "x = float(x)\n",
     "# Esp y sang int\n",
-    "# Esp z sang float"
+    "y = int(x)\n",
+    "# Esp z sang string\n",
+    "z = str(z)\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "f5d8f4a3",
    "metadata": {},
    "outputs": [
@@ -215,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "9\n"
      ]
     }
    ],
@@ -266,14 +298,6 @@
     "| Set có phần tử             | `True`              | Ví dụ: `{1, 2}`                        |\n",
     "| `object()`                 | `True`              | Đối tượng bất kỳ                       |\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11a6b2e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
