--- a/Buoi2/if__else.ipynb
+++ b/Buoi2/if__else.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "52e5523c",
    "metadata": {},
    "outputs": [
@@ -39,19 +39,12 @@
     }
    ],
    "source": [
-    "x = 7\n",
-    "\n",
-    "if x > 10:\n",
-    "    print(\"Lớn hơn 10\")\n",
-    "elif x == 10:\n",
-    "    print(\"Bằng 10\")\n",
-    "else:\n",
-    "    print(\"Nhỏ hơn 10\")\n"
+    "# tao mot bien x = tuổi của bạn. Biện luận biến đó với 20."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b95d9253",
    "metadata": {},
    "outputs": [
@@ -72,12 +65,13 @@
     "# Dùng để lặp qua một dãy phần tử (list, chuỗi, range, v.v.)\n",
     "for i in range(5):\n",
     "    print(i)\n",
-    "\n"
+    "    \n",
+    "# for(int i; i <5;i++) cout << i; "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9f3c6d00",
    "metadata": {},
    "outputs": [
@@ -97,7 +91,11 @@
     "count = 0\n",
     "while count < 3:\n",
     "    print(\"Lần:\", count)\n",
-    "    count += 1\n"
+    "    count += 1\n",
+    "    '''\n",
+    "while dieukien:\n",
+    "    code\n",
+    "    '''"
    ]
   },
   {
@@ -123,7 +121,24 @@
    "execution_count": null,
    "id": "1232df79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# Ví dụ dùng break\n",
     "for i in range(10):\n",
@@ -134,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5b89d4c1",
    "metadata": {},
    "outputs": [
@@ -145,13 +160,14 @@
       "0\n",
       "1\n",
       "3\n",
-      "4\n"
+      "4\n",
+      "5\n"
      ]
     }
    ],
    "source": [
     "# Ví dụ dùng continue\n",
-    "for i in range(5):\n",
+    "for i in range(6):\n",
     "    if i == 2:\n",
     "        continue\n",
     "    print(i)\n"
@@ -173,33 +189,67 @@
    "execution_count": null,
    "id": "5a45d96e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So duong\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Bài 1:\n",
-    "Nhập vào một số nguyên `n`. In ra:\n",
+    "gán số nguyên `n`. In ra:\n",
     "- `\"Số dương\"` nếu `n > 0`\n",
     "- `\"Số âm\"` nếu `n < 0`\n",
     "- `\"Bằng 0\"` nếu `n == 0`\n",
-    "'''\n"
+    "'''\n",
+    "\n",
+    "n = 20\n",
+    "if n > 0:\n",
+    "    print(\"So duong\")\n",
+    "elif n < 0:\n",
+    "    print(\"So am\")\n",
+    "else:\n",
+    "    print(\"Bang 0\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6c78cebc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trung Binh\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Bài 2:\n",
-    "Nhập vào điểm số `diem` (0–10). In ra xếp loại:\n",
+    "random `diem` (0–10). In ra xếp loại:\n",
     "- `\"Giỏi\"` nếu từ 8 trở lên\n",
     "- `\"Khá\"` nếu từ 6.5 đến dưới 8\n",
     "- `\"Trung bình\"` nếu từ 5 đến dưới 6.5\n",
     "- `\"Yếu\"` nếu dưới 5\n",
     "'''\n",
-    "\n",
+    "import random \n",
+    "diem = random.randint(0, 10)\n",
+    "if diem >=8:\n",
+    "    print(\"Gioi\")\n",
+    "elif diem >= 6.5 and diem < 8:\n",
+    "    print(\"Kha\")\n",
+    "elif diem >=5 and diem < 6.5:\n",
+    "    print(\"Trung Binh\")\n",
+    "else:\n",
+    "    print(\"Yeu\")\n",
     "\n"
    ]
   },
@@ -228,16 +278,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "49c33337",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Bài 4:\n",
     "In ra các số chẵn từ 1 đến 100 bằng vòng lặp `for`.\n",
     "'''\n",
-    "\n"
+    "for i in range(1, 101):\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -245,25 +403,61 @@
    "execution_count": null,
    "id": "13153deb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Bài 5:\n",
     "Viết chương trình tính tổng các số từ 1 đến `n` (do người dùng nhập).\n",
-    "'''"
+    "'''\n",
+    "n = 5\n",
+    "sum1 = 0\n",
+    "for i in range(1,n+1):\n",
+    "    sum1 = sum1 + i\n",
+    "# cách 1\n",
+    "print(sum1)\n",
+    "# cách 2\n",
+    "print(sum(i for i in range(1, n+1)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0399f59f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 * 1 = 7\n",
+      "7 * 2 = 14\n",
+      "7 * 3 = 21\n",
+      "7 * 4 = 28\n",
+      "7 * 5 = 35\n",
+      "7 * 6 = 42\n",
+      "7 * 7 = 49\n",
+      "7 * 8 = 56\n",
+      "7 * 9 = 63\n",
+      "7 * 10 = 70\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Bài 6:\n",
     "In bảng cửu chương của số 7.\n",
     "'''\n",
+    "for i in range(1, 11):\n",
+    "    print(f\"7 * {i} = {7*i}\")\n",
     "\n"
    ]
   },
@@ -278,8 +472,16 @@
     "Bài 7:\n",
     "Dùng vòng lặp `while` để nhập liên tục các số nguyên từ bàn phím.  \n",
     "Khi nhập số âm thì dừng lại và in ra tổng các số đã nhập.\n",
-    "'''"
+    "'''\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9bcf000",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
