--- a/Buoi2/operators.ipynb
+++ b/Buoi2/operators.ipynb
@@ -165,6 +165,17 @@
     "\n",
     "y >> 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93e60699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nhập giá trị cho biến\n",
+    "a = input(\"a = \")"
+   ]
   }
  ],
  "metadata": {
@@ -174,7 +185,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.13"
   }
  },
