--- a/Buoi2/variables.ipynb
+++ b/Buoi2/variables.ipynb
@@ -49,7 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "f6dc81dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10 \n",
+    "X =10\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2631a5e6",
    "metadata": {},
    "outputs": [
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "eac68147",
    "metadata": {},
    "outputs": [],
@@ -80,12 +100,13 @@
     "# Nếu bạn muốn chỉ định kiểu dữ liệu của một biến, điều này có thể được thực hiện bằng cách truyền.\n",
     "x = str(3)    # x will be '3'\n",
     "y = int(3)    # y will be 3\n",
-    "z = float(3)  # z will be 3.0"
+    "z = float(3)  # z will be 3.0\n",
+    "h = str(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "5888d245",
    "metadata": {},
    "outputs": [
@@ -94,7 +115,8 @@
      "output_type": "stream",
      "text": [
       "<class 'int'>\n",
-      "<class 'str'>\n"
+      "<class 'str'>\n",
+      "<class 'float'>\n"
      ]
     }
    ],
@@ -102,13 +124,15 @@
     "#Lấy kiểu dữ liệu của một biến bằng hàm type()\n",
     "x = 5\n",
     "y = \"HIT Python Public 2025\"\n",
+    "h = 3.14\n",
     "print(type(x))\n",
-    "print(type(y))\n"
+    "print(type(y))\n",
+    "print(type(h))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "18401973",
    "metadata": {},
    "outputs": [
@@ -117,7 +141,8 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "HIT Python Public 2025\n"
+      "HIT Python Public 2025\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -127,12 +152,13 @@
     "x = 5  \n",
     "X = \"HIT Python Public 2025\"\n",
     "print(x)    \n",
-    "print(X)\n"
+    "print(X)\n",
+    "print(type(X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ec4942ac",
    "metadata": {},
    "outputs": [
@@ -148,15 +174,15 @@
    ],
    "source": [
     "#Python cho phép bạn gán giá trị cho nhiều biến trong một dòng:\n",
-    "x, y, z = \"HIT\", \"Python\", \"Public 2025\"\n",
+    "x , y, z = \"HIT\", \"Python\", \"Public 2025\"\n",
     "print(x)\n",
-    "print(y)\n",
+    "print(y)       \n",
     "print(z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "fa787b84",
    "metadata": {},
    "outputs": [
@@ -180,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b369bd78",
    "metadata": {},
    "outputs": [
@@ -229,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "4e741af1",
    "metadata": {},
    "outputs": [
@@ -250,25 +276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "a5cea640",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m x = \u001b[32m5\u001b[39m\n\u001b[32m      3\u001b[39m y = \u001b[33m\"\u001b[39m\u001b[33mUbuntu\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m)\n",
-      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +: 'int' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PythonUbuntu\n"
      ]
     }
    ],
    "source": [
     "# khi bạn cố gắng kết hợp một chuỗi và một số với toán tử, Python sẽ cho bạn một lỗi:print()+\n",
-    "x = 5\n",
+    "x = \"Python\"\n",
     "y = \"Ubuntu\"\n",
     "print(x + y)"
    ]
@@ -295,14 +317,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d87f3f93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a22db956",
    "metadata": {},
@@ -327,11 +341,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b8dd8663",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outside function: HIT Python Public 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "global_var = \"HIT Python Public 2025\"  # Biến toàn cục\n",
+    "\n",
+    "def my_function():\n",
+    "    local_var = \"Local Variable\"  # Biến cục bộ\n",
+    "    print(\"Inside function:\", local_var)\n",
+    "    print(\"Global variable:\", global_var)\n",
+    "\n",
+    "print(\"Outside function:\", global_var)"
+   ]
   }
  ],
  "metadata": {
